# ModelViewer

./: .gitignore  CMakeLists.txt  conanfile.py  readme.md  requirements.txt
.github/workflows/: linux.yml  windows.yml
profiles/: windows
public/Camera/Camera/: Camera.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
public/Common/Common/: ClassMacros.hpp  Constants.hpp  IRestorable.hpp  Math.hpp  SignalMacros.hpp
public/Controls/Controls/: OrbitalControls.hpp  WindowCallbacks.hpp
public/Geometry/Geometry/: Box.hpp  Line.hpp  Plane.hpp  Point.hpp  VertexBuffer.hpp  VertexBuffered.hpp
public/IO/IO/: GeometryLoader.hpp  ModelLoader.hpp  TextureLoader.hpp
public/Light/Light/: DirectionalLight.hpp  ILight.hpp
public/Material/Material/: IMaterial.hpp  LambertianMaterial.hpp  MeshMaterial.hpp  PhongMaterial.hpp  PhongTexturedMaterial.hpp  SolidMaterial.hpp  SolidPointLineMaterial.hpp
public/Object/Object/: Mesh.hpp
public/Renderer/Renderer/: Renderer.hpp
public/Shader/Shader/: Shader.hpp  ShaderProgram.hpp  VertexAttribute.hpp
public/Texture/Texture/: Texture.hpp
source/: App.cpp  App.hpp  CMakeLists.txt  OrbitalControls.cpp  OrbitalControls.hpp  WindowCallbacks.cpp  WindowCallbacks.hpp  config.json  main.cpp
source/Application/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
source/Application/UI/: Dialog.cpp  Dialog.hpp  Icons.hpp  LightPropertiesDialog.cpp  LightPropertiesDialog.hpp  MaterialPropertiesDialog.cpp  MaterialPropertiesDialog.hpp  ModelLoaderDialog.cpp  ModelLoaderDialog.hpp  ScenePropertiesDialog.cpp  ScenePropertiesDialog.hpp  Utility.cpp  Utility.hpp
source/Application/UI/Components/: DirectionalLightProps.cpp  DirectionalLightProps.hpp  IComponent.hpp  LambertianProps.cpp  LambertianProps.hpp  LightProps.cpp  LightProps.hpp  MainFrame.cpp  MainFrame.hpp  MainMenu.cpp  MainMenu.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelProps.cpp  ModelProps.hpp  PhongProps.cpp  PhongProps.hpp  PhongTexturedProps.cpp  PhongTexturedProps.hpp  Properties.cpp  Properties.hpp  SceneProps.cpp  SceneProps.hpp  SceneTree.cpp  SceneTree.hpp  TextureImporter.cpp  TextureImporter.hpp  TitleBar.cpp  TitleBar.hpp  Viewport.cpp  Viewport.hpp
source/Application/UI/Components/FileExplorer/: DirectoryTree.cpp  DirectoryTree.hpp  DirectoryView.cpp  DirectoryView.hpp  FileExplorer.cpp  FileExplorer.hpp  FileSelector.cpp  FileSelector.hpp
source/Application/UI/Components/Properties/: DirectionalLightProps.cpp  LambertianProps.cpp  LightProps.cpp  LightProps.hpp  ModelProps.cpp  ModelProps.hpp  PhongProps.cpp  PhongTexturedProps.cpp  PhongTexturedProps.hpp  Properties.cpp  Properties.hpp  SceneProps.cpp
source/Camera/: CMakeLists.txt  Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
source/Common/: CMakeLists.txt  Math.cpp
source/Controls/: CMakeLists.txt  OrbitalControls.cpp  WindowCallbacks.cpp
source/Geometry/: Box.cpp  CMakeLists.txt  Line.cpp  Plane.cpp  Point.cpp  VertexBuffer.cpp  VertexBuffered.cpp
source/IO/: CMakeLists.txt  GeometryLoader.cpp  ModelLoader.cpp  TextureLoader.cpp
source/Light/: CMakeLists.txt  DirectionalLight.cpp
source/Material/: CMakeLists.txt  LambertianMaterial.cpp  MeshMaterial.cpp  PhongMaterial.cpp  PhongTexturedMaterial.cpp  SolidMaterial.cpp  SolidPointLineMaterial.cpp
source/Object/: CMakeLists.txt  Mesh.cpp
source/Renderer/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  GeometryArtist.cpp  GeometryArtist.hpp  IndexedArtist.cpp  IndexedArtist.hpp  NonIndexedArtist.cpp  NonIndexedArtist.hpp  PointLineArtist.cpp  PointLineArtist.hpp  Renderer.cpp  Renderer.hpp  ShaderCache.hpp  ShearArtist.cpp  ShearArtist.hpp
source/RendererUtil/: CMakeLists.txt  Camera.cpp  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Shader.cpp  Shader.hpp
source/Shader/: CMakeLists.txt  Shader.cpp  ShaderProgram.cpp  VertexAttribute.cpp
source/Shader/glsl/: mesh.frag  mesh.vert  meshPhong.frag  nonIndexed.frag  nonIndexed.vert  phong.frag  phong.vert  phongTextured.frag  shear.frag  shear.vert  shearSolid.frag
source/Texture/: CMakeLists.txt  Texture.cpp
